add some available time data